--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="'Frogger' Clone written in JavaScript, only works on desktop.">
+    <meta property="og:title" content="'Frogger' Game" />
+    <meta property="og:image" content="http://matthewrhone.com/apps/frogger/images/frogger.png">
+    <meta property="og:description" content="Memory Card Matching Game." />
 </head>
+
 <body>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
 </body>
+
 </html>
